# JGPT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  Makefile  README.md  clean_text.py  dashboard.html  download_and_prepare_dataset.py  logs.txt  pom.xml  run-training.sh  validate_dataset.py
.github/workflows/: ci.yml  maven.yml
.qwen/: settings.json
books/: Vovchok_ChervonnyjKorol.txt
build-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
data/books/: 03_Bolshaya_operatsiya.fb2__Джеймс_Уайт_--_03._Большая_операция.txt  1.A_1.txt  11_Kosmicheskiy_psikholog.fb2__Джеймс_Уайт_--_11._Космический_психолог.txt  1992_god._Kniaz_tmy_Cherv_1_.fb2__Александр_Лазаревич_--_1992_год._Князь_тьмы_Червь-1_.txt  1_Putevoditel_khitch_khaykera_po_Galaktike.fb2__Дуглас_Адамс_--_Путеводитель_хитч-хайкера_по_Галактике.txt  2._Taipi.fb2__Герман_Мелвилл_--_1._Тайпи.txt  4._Svecha_na_vetru.fb2__Теренс_Уайт_--_4._Свеча_на_ветру.txt  5._Kniga_Merlina.fb2__Теренс_Уайт_--_5._Книга_Мерлина.txt  A_Kritika_.fb2__Кирилл_Еськов_--_А_Критика_.txt  A_ba_ba_ba_ba.fb2__Акутагава_Рюноскэ_--_А-ба-ба-ба-ба.txt  Ad_eto_vechnost.fb2__Альфред_Бестер_--_Ад_это_вечность.txt  Ad_odinochestva.fb2__Акутагава_Рюноскэ_--_Ад_одиночества.txt  Admiralteistvo.fb2__Пол_Андерсон_--_Адмиралтейство.txt  Ambar_Robin_Guda.fb2__Пол_Андерсон_--_Амбар_Робин_Гуда.txt  Amerika_reload_game_.fb2__Кирилл_Еськов_--_Америkа_reload_game_.txt  Avatara.fb2__Пол_Андерсон_--_Аватара.txt  BRG01_Karibskoe_tango.fb2__Кирилл_Еськов_--_BRG01._Карибское_танго.txt  BRG02_Iz_Rossii_s_privetom.fb2__Кирилл_Еськов_--_BRG02._Из_России_с_приветом.txt  BRG03_Paladiny_i_saratsiny.fb2__Кирилл_Еськов_--_BRG03._Паладины_и_сарацины.txt  Bal.fb2__Рюноскэ_Акутагава_--_Бал.txt  Batatovaya_kasha.fb2__Акутагава_Рюноскэ_--_Бататовая_каша.txt  Beskonechnaya_igra.fb2__Пол_Андерсон_--_Бесконечная_игра.txt  (+318 more)
docs/: DATA_PREPARATION.md  ROADMAP_GPU_RESIDENT.md  TRAIN_RUNBOOK.md  dashboard.html
docs/training/: README.md
env/: 00-max-throughput.env  01-aggressive.env  02-stable.env  03-recovery.env  04-minimal.env
scripts/: batch-sweep.sh  build_jgpt_cuda.sh  download-lib-ru-library.sh  fix_cross_package_imports.py  jgpt-chat.sh  jgpt-export-stats.py  jgpt-export-stats.sh  jgpt-gpu-train-lib.sh  jgpt-monitor.sh  jgpt-patch-cuda-glibc-math.sh  jgpt-smart.sh  jgpt-start.sh  migrate_packages.py  mvn_test_gpu.sh  nsys-rep-export-sqlite.sh  perf-smoke.sh  profile-matmul-refactor.sh  profile-nsys.sh  qdstrm-to-nsys-rep.sh  refactor_llm_trainer_apply.py  run-training-gpu.sh  train-e2e-gpu.sh
src/main/cpp/: CMakeLists.txt  jgpt_cuda.cu  jgpt_cuda_cublas_common.cuh  jgpt_cuda_error_macros.cuh  jgpt_cuda_extra.cu  jgpt_cuda_extra_jni_attention.inl  jgpt_cuda_extra_jni_device.inl  jgpt_cuda_extra_jni_graph_flash.inl  jgpt_cuda_extra_jni_host_fwd.inl  jgpt_cuda_extra_jni_optim.inl  jgpt_cuda_extra_kernels_launches.inl  jgpt_cuda_extra_thread_resources.cuh  jgpt_cuda_ffn_link.h  jgpt_cuda_graph_prewarm.h  jgpt_cuda_jni_buffers.inl  jgpt_cuda_jni_helpers.cuh  jgpt_cuda_jni_init_matmul.inl  jgpt_cuda_jni_ops_graph.inl  jgpt_cuda_jni_raii.cuh  jgpt_cuda_kernels_launches_macros.inl  jgpt_cuda_matmul_staging.inl  jgpt_cuda_runtime.inl  jgpt_cuda_size_check.cuh  jgpt_cuda_stream.cuh  jgpt_cuda_tls_blob.cuh
src/main/cpp/build-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
src/main/cpp/build-jgpt-cmake/: CMakeCache.txt
src/main/cpp/build_agent/: CMakeCache.txt
src/main/cpp/build_cuda_test/: CMakeCache.txt
state/: current.env  stats.json
(+198 files in other folders)
